<resources>
    <string name="app_name">Route26</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="no_favorites">No favorites found</string>
    <string name="no_recent">No recent searches found</string>
    <string name="no_manage">No events to manage</string>

    <string name="desc_title">Description</string>

    <string name="no_start_date">No start date/time found</string>
    <string name="no_end_date">No end date/time found</string>
    <string name="no_genre">No genre found</string>
    <string name="no_location">No location found</string>
    <string name="no_desc">No description found</string>


    <string name="recent_header">Recent Searches</string>
    <string name="favorites_header">Favorite Events</string>
    <string name="manage_header">Manage Events</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="browse_button">Browse</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_producer_dashboard">ProducerDashboard</string>

    <string name="action_search">Search</string>

    <string name="create_button">Create Event</string>

    <string name="app_label">Route 26</string>
    <string name="search_hint">Search events</string>


    <string name="no_event_name">No event found</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_event_details">EventDetails</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register_account">RegisterAccount</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title_activity_manage_event">ManageEventActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="create_event_name">Event Name</string>
    <string name="create_street_addr">Street Address</string>
    <string name="create_state">State</string>
    <string name="create_city">City</string>
    <string name="create_zip">Zip Code</string>
    <string name="create_no_date_set">No Date Set</string>
    <string name="create_no_time_set">No Time set</string>
    <string name="create_description">Description</string>
    <string name="create_set_date">Set Date</string>
    <string name="create_set_time">Set Time</string>

    <string name="create_set_start_time">Set Start Time</string>
    <string name="create_set_end_time">Set End Time</string>
    <string name="reg_name">Name</string>
</resources>
