<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_top"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateEventActivity"
    tools:showIn="@layout/activity_create_event">

    <EditText
        android:id="@+id/create_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/create_event_name"
        android:inputType="textCapWords"
        android:nextFocusForward="@id/create_street"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_street"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/create_street_addr"
        android:inputType="textPostalAddress"
        android:nextFocusForward="@id/create_city"
        android:nextFocusDown="@id/create_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_name" />

    <LinearLayout
        android:id="@+id/create_addr_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/create_street">

        <EditText
            android:id="@+id/create_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="@string/create_city"
            android:inputType="text"
            android:nextFocusForward="@id/create_state"
            android:nextFocusDown="@id/create_state"/>

        <EditText
            android:id="@+id/create_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="@string/create_state"
            android:maxLength="2"
            android:inputType="textCapCharacters"
            android:nextFocusForward="@id/create_zip"
            android:nextFocusDown="@id/create_zip"/>

        <EditText
            android:id="@+id/create_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="@string/create_zip"
            android:maxLength="5"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_start_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/create_addr_details">

        <TextView
            android:id="@+id/create_start_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_set_start_time" />

        <LinearLayout
            android:id="@+id/create_set_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/create_start_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_set_date" />

            <TextView
                android:id="@+id/create_start_date_disp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_no_date_set" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/create_set_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/create_start_time_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_set_time" />

            <TextView
                android:id="@+id/create_start_time_disp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_no_time_set" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_end_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/create_start_date_time">

        <TextView
            android:id="@+id/create_end_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_set_end_time"/>

        <LinearLayout
            android:id="@+id/create_set_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/create_end_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_set_date" />

            <TextView
                android:id="@+id/create_end_date_disp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_no_date_set" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/create_set_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/create_end_time_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_set_time"/>
            <TextView
                android:id="@+id/create_end_time_disp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_no_time_set"/>
        </LinearLayout>
    </LinearLayout>


    <EditText
        android:id="@+id/create_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/create_description"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_end_date_time" />

    <Button
        android:id="@+id/create_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>