<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EventDetailsActivity"
    tools:showIn="@layout/activity_event_details">


    <TextView
        android:id="@+id/details_start_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_clock_black_24dp"
        android:text="@string/no_start_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/details_end_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_clock_black_24dp"
        android:text="@string/no_end_date"
        app:layout_constraintTop_toBottomOf="@id/details_start_date_time" />

    <TextView
        android:id="@+id/details_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_location_black_24dp"
        android:text="@string/no_location"
        app:layout_constraintTop_toBottomOf="@id/details_end_date_time" />

    <LinearLayout
        android:id="@+id/details_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_loc">

        <TextView
            android:id="@+id/details_desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_title"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/details_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_note_black_24dp"
            android:text="@string/no_desc" />
    </LinearLayout>




    

</android.support.constraint.ConstraintLayout>