<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.i4i.hcvb.route26.ConsumerDashboard"
    tools:showIn="@layout/app_bar_consumer_dashboard">


    <!--<android.support.constraint.ConstraintLayout-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:id="@+id/con_lists"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:orientation="vertical"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--tools:context="com.i4i.hcvb.route26.ConsumerDashboard">-->

    <Button
        android:id="@+id/con_browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/browse_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/recent_header"
        android:id="@+id/recent_header"
        app:layout_constraintTop_toBottomOf="@id/con_browse"/>

    <ListView
        android:id="@+id/recent_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/favorites_header"
        app:layout_constraintTop_toBottomOf="@id/recent_header" />

    <TextView
        android:id="@+id/no_recent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_recent"
        app:layout_constraintTop_toBottomOf="@id/recent_header"/>

    <TextView
        android:id="@+id/favorites_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/favorites_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/favorites_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/favorites_header" />

    <TextView
        android:id="@+id/no_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_favorites"
        app:layout_constraintTop_toBottomOf="@id/favorites_header"/>

    <!--</android.support.constraint.ConstraintLayout>-->


</android.support.constraint.ConstraintLayout>
